--- a/ExerciseDaemon/ExerciseDaemon.Signup/ExerciseDaemon.Signup.csproj
+++ b/ExerciseDaemon/ExerciseDaemon.Signup/ExerciseDaemon.Signup.csproj
@@ -5,6 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="AWSSDK.DynamoDBv2" Version="3.3.105.16" />
     <PackageReference Include="Microsoft.AspNetCore.All" Version="2.0.9" />
     <PackageReference Include="Microsoft.Extensions.Hosting" Version="3.1.3" />
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="2.0.3" />
