--- a/ExerciseDaemon/ExerciseDaemon.Signup/appsettings.json
+++ b/ExerciseDaemon/ExerciseDaemon.Signup/appsettings.json
@@ -6,7 +6,14 @@
     }
   },
   "Strava": {
-    "ClientId": 0, 
-    "ClientSecret": "" 
-  }
+    "ClientId": 0,
+    "ClientSecret": ""
+  },
+  "DynamoDb": {
+    "RegionEndpoint": "us-east-1",
+    "ServiceUrl": ""
+  },
+  "Slack": {
+    "BaseUrl": "https://hooks.slack.com/services/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"
+  } 
 }
