--- a/ExerciseDaemon/ExerciseDaemon.Signup/appsettings.json
+++ b/ExerciseDaemon/ExerciseDaemon.Signup/appsettings.json
@@ -14,6 +14,6 @@
     "ServiceUrl": ""
   },
   "Slack": {
-    "BaseUrl": "https://hooks.slack.com/services/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"
+    "BaseUrl": ""
   } 
 }
