--- a/ExerciseDaemon/Properties/launchSettings.json
+++ b/ExerciseDaemon/Properties/launchSettings.json
@@ -1,4 +1,4 @@
-{
+  {
   "iisSettings": {
     "windowsAuthentication": false,
     "anonymousAuthentication": true,
@@ -8,20 +8,13 @@
     }
   },
   "profiles": {
-    "IIS Express": {
-      "commandName": "IISExpress",
-      "launchBrowser": true,
-      "environmentVariables": {
-        "ASPNETCORE_ENVIRONMENT": "Development"
-      }
-    },
-    "ExerciseDaemon.Signup": {
+    "ExerciseDaemon": {
       "commandName": "Project",
       "launchBrowser": true,
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       },
-      "applicationUrl": "http://localhost:5236/"
+      "applicationUrl": "http://localhost:5236"
     }
   }
 }
