Update deploy for codebuild

--- a/ExerciseDaemon/appsettings.json
+++ b/ExerciseDaemon/appsettings.json
@@ -2,18 +2,20 @@
   "Logging": {
     "IncludeScopes": false,
     "LogLevel": {
-      "Default": "Warning"
+      "Default": "Debug",
+      "System": "Information",
+      "Microsoft": "Information"
     }
   },
   "Strava": {
-    "ClientId": 0,
-    "ClientSecret": ""
+    "ClientId": 44934,
+    "ClientSecret": "0e6df6b4e25e895eea27559f71403d427a898a2b"
   },
   "DynamoDb": {
     "RegionEndpoint": "us-east-1",
     "ServiceUrl": ""
   },
   "Slack": {
-    "BaseUrl": ""
-  } 
+    "BaseUrl": "https://hooks.slack.com/services/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"
+  }
 }
