--- a/ExerciseDaemon/appsettings.json
+++ b/ExerciseDaemon/appsettings.json
@@ -8,14 +8,14 @@
     }
   },
   "Strava": {
-    "ClientId": 44934,
-    "ClientSecret": "0e6df6b4e25e895eea27559f71403d427a898a2b"
+    "ClientId": 0,
+    "ClientSecret": ""
   },
   "DynamoDb": {
     "RegionEndpoint": "us-east-1",
     "ServiceUrl": ""
   },
   "Slack": {
-    "BaseUrl": "https://hooks.slack.com/services/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"
+    "BaseUrl": ""
   }
 }
