--- a/ExerciseDaemon/appsettings.json
+++ b/ExerciseDaemon/appsettings.json
@@ -16,6 +16,9 @@
     "ServiceUrl": ""
   },
   "Slack": {
-    "BaseUrl": ""
+    "BaseUrl": "",
+    "SlackClientId": "",
+    "SlackClientSecret": "",
+    "SlackRedirectUri": ""
   }
 }
