Add config for adding user to channel on join

--- a/ExerciseDaemon/appsettings.json
+++ b/ExerciseDaemon/appsettings.json
@@ -16,7 +16,9 @@
     "ServiceUrl": ""
   },
   "Slack": {
-    "BaseUrl": "",
+    "SlackWebhookUrl": "",
+    "SlackWorkspaceUrl": "",
+    "SlackChannelId": "",
     "SlackClientId": "",
     "SlackClientSecret": "",
     "SlackRedirectUri": ""
