Add user to channel

--- a/ExerciseDaemon/appsettings.json
+++ b/ExerciseDaemon/appsettings.json
@@ -19,6 +19,7 @@
     "SlackWebhookUrl": "",
     "SlackWorkspaceUrl": "",
     "SlackChannelId": "",
+    "SlackBotUserAccessToken": "",
     "SlackClientId": "",
     "SlackClientSecret": "",
     "SlackRedirectUri": ""
