--- a/ExerciseDaemon/appsettings.json
+++ b/ExerciseDaemon/appsettings.json
@@ -1,11 +1,16 @@
 ﻿{
-  "Logging": {
-    "IncludeScopes": false,
-    "LogLevel": {
-      "Default": "Debug",
-      "System": "Information",
-      "Microsoft": "Information"
-    }
+  "Serilog": {
+    "Using": [
+      "AWS.Logger.SeriLog"
+    ],
+    "LogGroup": "ecs-exercise-daemon",
+    "Region": "us-east-1",
+    "MinimumLevel": { "Default": "Information" },
+    "WriteTo": [
+      { "Name": "AWSSeriLog" },
+      { "Name": "Console", "Args": { "formatter": "Serilog.Formatting.Compact.RenderedCompactJsonFormatter, Serilog.Formatting.Compact" } },
+      { "Name": "File", "Args": { "path": "log.txt", "rollingInterval": "Day" } }
+    ]
   },
   "Strava": {
     "ClientId": 0,
