--- a/ExerciseDaemon/ExerciseDaemon.csproj
+++ b/ExerciseDaemon/ExerciseDaemon.csproj
@@ -5,6 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="AWS.Logger.SeriLog" Version="1.5.2" />
     <PackageReference Include="AWSSDK.DynamoDBv2" Version="3.3.105.16" />
     <PackageReference Include="AWSSDK.S3" Version="3.3.110.50" />
     <PackageReference Include="Microsoft.AspNetCore.All">
@@ -12,6 +13,11 @@
       <Publish Condition="'%(PackageReference.Version)' == ''">true</Publish>
     </PackageReference>
     <PackageReference Include="Microsoft.Extensions.Hosting" Version="3.1.3" />
+    <PackageReference Include="Serilog.AspNetCore" Version="3.2.0" />
+    <PackageReference Include="Serilog.Formatting.Compact" Version="1.1.0" />
+    <PackageReference Include="Serilog.Settings.Configuration" Version="3.1.0" />
+    <PackageReference Include="Serilog.Sinks.Console" Version="3.1.1" />
+    <PackageReference Include="Serilog.Sinks.File" Version="4.1.0" />
     <PackageReference Include="SixLabors.ImageSharp" Version="1.0.0-beta0007" />
   </ItemGroup>
 
