New messages, override error levels

--- a/ExerciseDaemon/appsettings.json
+++ b/ExerciseDaemon/appsettings.json
@@ -6,10 +6,24 @@
     "LogGroup": "ecs-exercise-daemon",
     "Region": "us-east-1",
     "MinimumLevel": { "Default": "Information" },
+    "Override": {
+      "Microsoft": "Warning",
+      "System": "Error",
+      "Microsoft.AspNetCore.Mvc.Internal.ControllerActionInvoker": "Warning"
+    },
     "WriteTo": [
       { "Name": "AWSSeriLog" },
-      { "Name": "Console", "Args": { "formatter": "Serilog.Formatting.Compact.RenderedCompactJsonFormatter, Serilog.Formatting.Compact" } },
-      { "Name": "File", "Args": { "path": "log.txt", "rollingInterval": "Day" } }
+      {
+        "Name": "Console",
+        "Args": { "formatter": "Serilog.Formatting.Compact.RenderedCompactJsonFormatter, Serilog.Formatting.Compact" }
+      },
+      {
+        "Name": "File",
+        "Args": {
+          "path": "log.txt",
+          "rollingInterval": "Day"
+        }
+      }
     ]
   },
   "Strava": {
