Turn off microsoft logs

--- a/ExerciseDaemon/appsettings.json
+++ b/ExerciseDaemon/appsettings.json
@@ -7,9 +7,9 @@
     "Region": "us-east-1",
     "MinimumLevel": { "Default": "Information" },
     "Override": {
-      "Microsoft": "Warning",
+      "Microsoft": "None",
       "System": "Error",
-      "Microsoft.AspNetCore.Mvc.Internal.ControllerActionInvoker": "Warning"
+      "Microsoft.AspNetCore.Mvc.Internal.ControllerActionInvoker": "None"
     },
     "WriteTo": [
       { "Name": "AWSSeriLog" },
